--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dev_dependencies:
   flutter_secure_storage: ^4.1.0
   flutter_staggered_grid_view: ^0.4.0
   flutter_svg: ^0.21.0+1
+  razorpay_flutter: ^1.2.2
   font_awesome_flutter: ^9.0.0
   google_sign_in: ^5.0.2
   image_cropper: null
